--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/00-template
 
 # dependencies
-/node_modules
+*/node_modules
 /.pnp
 .pnp.js
 
